# thermodynamic_non_markovian_optimization_technIque

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  docker-ci.yml
outputs/: compare_histories.csv  dimension_sweep.csv  publication_sweep.csv  run_histories.csv  statistical_sweep.csv
outputs/10D/: publication_sweep.csv
outputs/20D/: publication_sweep.csv
outputs/50D/: publication_sweep.csv
outputs/5D/: publication_sweep.csv
outputs/all_landscapes/: ackley_trial_0_histories.csv  ackley_trial_1_histories.csv  ackley_trial_2_histories.csv  all_landscape_comparison.csv  griewank_trial_0_histories.csv  griewank_trial_1_histories.csv  griewank_trial_2_histories.csv  rastrigin_trial_0_histories.csv  rastrigin_trial_1_histories.csv  rastrigin_trial_2_histories.csv  schwefel_trial_0_histories.csv  schwefel_trial_1_histories.csv  schwefel_trial_2_histories.csv  sphere_trial_0_histories.csv  sphere_trial_1_histories.csv  sphere_trial_2_histories.csv
phase1/project_root/: .coverage  main.py  pyproject.toml
phase1/project_root/benchmarks/: __init__.py  sweeps.py  v4_2.py
phase1/project_root/plots/: __init__.py  visualizations.py
phase1/project_root/src/: __init__.py  devices.py  landscapes.py  memory.py  optimizers.py  optimizers_backup.py  topology_mps.py
phase1/project_root/tests/: test_landscapes.py  test_memory.py  test_optimizers.py  test_topology_mps.py
scripts/: run_benchmarks.py
src/: optimizer.py
test/: test_optimizer.py
